@startuml

title __REPRESENTATION3D's Class Diagram__\n

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace SimEntity.Wall {
      namespace Representation3D {
        interface enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Representation3D.IWall3D {
            {abstract} + generateMursWithDistanceOfSecurity()
            {abstract} + getBounds()
            {abstract} + getBounds()
            {abstract} + getColor()
            {abstract} + getGroundBorder()
            {abstract} + getHeight()
            {abstract} + getType()
            {abstract} + getWallShape()
            {abstract} + getWalls()
            {abstract} + getWidth()
        }
      }
    }
  }
  

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace SimEntity.Wall {
      namespace Representation3D {
        class enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Representation3D.WallRepresentation3D {
            ~ wall : Group
            + WallRepresentation3D()
            + init()
            + update()
        }
      }
    }
  }
  

  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Representation3D.WallRepresentation3D -up-|> enstabretagne.monitor.implementation.Representation3D
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Representation3D.WallRepresentation3D o-- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Representation3D.IWall3D : wall3D


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
